k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ui
  template:
    metadata:
      labels:
        component: ui
    spec:
      containers:
        - name: react-ui
          image: mhnvelu/multi-container-react-ui
          ports:
            - containerPort: 3000
