k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend-server
  template:
    metadata:
      labels:
        component: backend-server
    spec:
      containers:
        - name: express-server
          image: mhnvelu/multi-container-backend-server
          ports:
            - containerPort: 5000
