k8s/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    component: backend-server
  ports:
    - port: 5000
      targetPort: 5000
